# Cordevall.PY

./: .env.example  .gitattributes  .gitignore  README.md  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/: cogs.py  main.py
